deployments/needhelp/7-needhelp.yml
apiVersion: v1
kind: Service
metadata:
  name: needhelp-v1
  namespace: default
  labels:
    app: needhelp
    service: needhelp-v1
spec:
  ports:
  - port: 8080
    targetPort: 8081
    name: http
  selector:
    app: needhelp
    version: v1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: needhelp-v1
  namespace: default
  labels:
    app: needhelp
    version: v1
spec:
  # Cattle not pet's!
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: needhelp
      version: v1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: needhelp
        version: v1
    spec:
      serviceAccountName: needhelp-service-account
      containers:
      - name: needhelp
        image: gijsvandulmen/repeater:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "50m"
            memory: "100Mi"
          limits:
            cpu: "500m"
            memory: "1000Mi"
        ports:
          - containerPort: 8081
        livenessProbe:
          httpGet:
            path: /live
            port: 8081
          initialDelaySeconds: 10
          periodSeconds: 60
          timeoutSeconds: 5
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /ready
            port: 8081
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 5
          failureThreshold: 2
        # env:
      terminationGracePeriodSeconds: 5
