deployments/needhelp/7-externalservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-svc-ipify
  namespace: default
  # https://api.ipify.org/?format=json
spec:
  hosts:
  - api.ipify.org
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: TLS
  - name: http
    number: 80
    protocol: HTTP
  resolution: NONE
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ipify-routing
  namespace: default
spec:
  hosts:
  - api.ipify.org
  #gateways:
  #- mesh
  http:
  - name: "redirect"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: api.ipify.org
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dr-ipify
spec:
  host: api.ipify.org
  # trafficPolicy:
  #   connectionPool:
  #     tcp:
  #       maxConnections: 10
  #     http:
  #       http2MaxRequests: 10
  #       maxRequestsPerConnection: 2
  #   # circuitbreaker
  #   outlierDetection:
  #     consecutiveErrors: 7
  #     interval: 5m
  #     baseEjectionTime: 15m
