deployments/needhelp/7-virtualservice-helper.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helper-vs
  namespace: default
spec:
  hosts:
  - helper-v1
  gateways:
  - default-gateway
  http:
  - route:
    - destination:
        host: helper-v1
        subset: v1
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
    name: helper-v1
    namespace: default
spec:
    host: helper-v1
    subsets:
    - name: v1
      labels:
        version: v1
