deployments/needhelp/7-virtualservice-needhelp.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: needhelp-vs
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - default-gateway
  http:
  - match:
    - uri:
        prefix: "/needhelp"
      ignoreUriCase: true
    route:
    - destination:
        host: needhelp-v1
        subset: v1
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
    name: needhelp-v1
    namespace: default
spec:
    host: needhelp-v1
    subsets:
    - name: v1
      labels:
        version: v1
